manifests/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprind-nex-gen-signing-service-dev
  namespace: sprind-eudi
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: sprind-nex-gen-signing-service-dev
