manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprind-nex-gen-signing-service-dev-ingress-rule
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
spec:
  tls:
    - hosts:
        - sprind-signing-service.ubique.ch
      secretName: sprind-nex-gen-signing-service-secret
  rules:
    - host: sprind-signing-service.ubique.ch
      http:
        paths:
          - backend:
              service:
                name: sprind-nex-gen-signing-service-dev
                port:
                  number: 8000
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: sprind-nex-gen-signing-service-dev
  namespace: ingress-basic
spec:
  type: ExternalName
  externalName: sprind-nex-gen-signing-service-dev.sprind-eudi.svc.cluster.local
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http8000
